# DINO-training

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/model/: resnet18.yaml  vit_small.yaml
data/: .gitignore  eval.dvc  gldv2.dvc
src/: download_eval_dataset.py  estimate_stats.py  eval.py  gui.py  model.py  train.py  transformations.py  transforms.py  utils.py  vision_transformer.py
