[project]
name = "dino-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "pillow>=12.1.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
